--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,6 @@
         @apply cursor-pointer text-xl hover:animate-pulse border-black p-2 transition-all duration-300 ease-in;
     }
     .skills {
-        @apply p-4 flex flex-col items-center justify-center text-base text-center;
+        @apply p-4 flex flex-col items-center justify-center text-xs text-center;
     }
 }
