--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer components{
     .navBtn{
-        @apply cursor-pointer text-base hover:animate-pulse border-black p-2 transition-all duration-300 ease-in;
+        @apply cursor-pointer text-xl hover:animate-pulse border-black p-2 transition-all duration-300 ease-in;
     }
     .skills {
         @apply p-4 flex flex-col items-center justify-center text-xs text-center;
